samples/_failures_safe/1761002549_3414dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa97a296.c: In function ‘main’:
./samples/SAFE/__tmp_fa97a296.c:150:17: error: expected expression at end of input
  150 |                 } else if (status == -1)
      |                 ^
./samples/SAFE/__tmp_fa97a296.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fa97a296.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fa97a296.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fa97a296.c:150:17: error: expected declaration or statement at end of input
